# copco

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
analysis/: research_plan_next_stage.md
analysis/autoresearch_v1/: final_publication_decision_report.md  reviewer_risk_report.md
analysis/benchmark_bridge_v1/: benchmark_bridge_decision_report.md  copco_rcs_benchmark_report.md  copco_typ_benchmark_report.md  eyebench_compatibility_report.md  participant_text_feature_dictionary.md  split_diagnostics.csv
analysis/d3_eyebench_goal_audit_v1/: algorithm_fidelity_audit.md  anchor_candidate_audit.md  artifact_inventory.md  candidate_per_regime_audit.md  goal_audit_decision.json  goal_audit_decision_report.md  leaderboard_directedness_audit.md  metric_consistency_audit.md  root_cause_report.md
analysis/d3_eyebench_own_method_score_max_v2/: anchor_reproduction_report.md  best_candidate_report.md  both_unseen_generalization_report.md  calibration_threshold_report.md  candidate_0000_trial_metrics.csv  candidate_leaderboard.csv  candidate_manifest.json  candidate_search_manifest.md  d3_eyebench_lite_leakage_report.md  d3_eyebench_lite_official_evaluation_report.md  evidence_summary_for_manuscript.md  feature_family_ablation_report.md  final_candidate_diagnostics.csv  final_decision.json  final_decision_report.md  fold_level_metrics.csv  inner_validation_fold_metrics.csv  leakage_validation_report.json  leakage_validation_report.md  manifest.json  metric_alignment_report.md  prohibited_predictor_report.md  reader_aggregated_metrics.csv  reader_aggregation_secondary_report.md  trial_metrics.csv
analysis/d3_eyebench_protocol_aligned_optimization_v1/: decision_report.md  leakage_report.md  manifest.json  official_sota_decision.json
analysis/d3_eyebench_protocol_aligned_optimization_v1_accelerated/: candidate_specs.json  leakage_report.json  manifest.json  official_sota_decision.json  optimization_report.md
analysis/d3_model_evidence_v1/: EVIDENCE_CONTRACT.md  INDEX.md  README.md  status.json
analysis/d3_model_evidence_v1_1/: EVIDENCE_CONTRACT.md  INDEX.md  README.md  status.json
analysis/d3_online_targeted_optimization_v1/: calibration_threshold_report.md  d3_online_targeted_optimization_validation_report.json  error_trajectory_report.md  final_online_targeted_decision.json  final_online_targeted_decision_report.md  legal_calibration_metrics.csv  legal_threshold_metrics.csv  legal_thresholds_learned.csv  nested_prediction_artifact_report.md  online_candidate_search_space.csv  online_candidate_validation_ranking.csv  online_evidence_accumulation_metrics.csv  online_evidence_accumulation_report.md  online_locked_test_results.csv  online_offline_comparison_table.csv  online_offline_comparison_table.md  online_prefix_model_metrics.csv  online_prefix_model_report.md  online_stopping_policy_metrics.csv  online_stopping_policy_report.md  online_targeted_optimization_report.md  oracle_information_budget.csv  oracle_upper_bound_metrics.csv  oracle_upper_bound_report.md  persistent_error_readers.csv  prefix_dataset_report.md  prefix_feature_dictionary.md  reader_probability_trajectories.csv  run_manifest.json  subgoal_status.json  subgoal_status.md
analysis/d3_online_targeted_optimization_v2/: copco_typ_comparison_v2.csv  copco_typ_comparison_v2.md  d3_online_targeted_optimization_v2_validation_report.json  error_source_by_prefix_report.md  final_decision_report.md  final_decision_v2.json  legal_threshold_calibration_v2.csv  legal_threshold_calibration_v2.md  per_prefix_performance_curves.csv  per_prefix_performance_report.md  run_manifest.json  strict_candidate_search_report.md  strict_candidate_search_space.csv  strict_candidate_validation_ranking.csv  strict_final_models.csv  strict_locked_test_results.csv  subgoal_status.json  subgoal_status.md  unseen_text_failure_analysis.md  v1_audit_report.md  (+2 more)
configs/: autoresearch_v1.yaml  benchmark_bridge_v1.yaml  copco_dyslexia_full.yaml  copco_dyslexia_smoke.yaml  d3_eyebench_own_method_score_max_v2.yaml  d3_eyebench_protocol_aligned_optimization_v1.yaml  d3_eyebench_protocol_aligned_optimization_v1_accelerated.yaml  d3_online_targeted_optimization_v1.yaml  d3_online_targeted_optimization_v2.yaml  feature_release_v1.yaml  final_manuscript_audit_v1.yaml  label_release_v1_1.yaml  official_eyebench_alignment_v1.yaml  official_eyebench_baseline_evaluator_closure_v1.yaml  official_eyebench_runtime_fix_v1.yaml  official_eyebench_sota_check_v1.yaml  operating_point_adaptation_v1.yaml  phase4_confirmatory_sensitivity_v1.yaml  research_exploration_v1.yaml  submission_v1.yaml
docs/: autoresearch_v1_analysis_plan.md  benchmark_bridge_v1_analysis_plan.md  d3_eyebench_own_method_score_max_v2.md  d3_online_detection_goal_contract_v1.md  d3_online_targeted_optimization_v1.md  d3_online_targeted_optimization_v2.md  d3_online_testing_standard_v1.md  decisions.md  eyebench_baseline_evaluator_closure_v1.md  eyebench_runtime_fix_v1.md  feature_dictionary_v1.md  final_scientific_decision_policy_v1.md  operating_point_adaptation_v1.md  participant_label_card_v1.md  phase4_confirmatory_analysis_plan.md  quality_label_card_v1.md  segmentation_label_card_v1.md  split_policy_v1.md
plan/: copco_dyslexia_research_plan.md
scripts/: resume_d3_online_targeted_optimization_downstream.py  validate_env.py
tests/: test_autoresearch.py  test_benchmark_bridge.py  test_d3_eyebench_own_method_score_max.py  test_d3_eyebench_protocol_optimization.py  test_d3_model_evidence_v1.py  test_d3_model_evidence_v1_1.py  test_d3_online_targeted_optimization.py  test_d3_online_targeted_optimization_v2.py  test_ids_features_splits_validation.py  test_import.py  test_label_release.py  test_lm_alignment.py  test_manuscript_audit.py  test_master_research_record_v1.py  test_official_eyebench_alignment.py  test_official_eyebench_baseline_evaluator_closure.py  test_official_eyebench_runtime_fix.py  test_official_eyebench_sota_check.py  test_operating_point_adaptation.py  test_phase4_confirmatory.py  test_release_pipeline.py  test_research_exploration.py  test_submission.py
(+516 files in other folders)
