[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copco-eye-bench"
version = "0.0.0"
description = "Research code for CopCo / Eye Bench Danish natural-reading eye-tracking analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [
  { name = "CopCo Eye Bench contributors" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]
runtime = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14",
  "pyyaml>=6",
  "scikit-learn>=1.3",
]
lm = [
  "accelerate>=0.26",
  "sentence-transformers>=3",
  "torch>=2,<2.11",
  "transformers>=4.45",
]
nlp = [
  "dacy>=2.7",
  "spacy>=3.7",
  "pyphen>=0.15",
]
analysis = [
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tabulate>=0.9",
]
stats = [
  "statsmodels>=0.14",
]
trees = [
  "lightgbm>=4",
  "xgboost>=2",
]
all = [
  "copco-eye-bench[analysis,dev,lm,nlp,runtime,stats,trees]",
]

[project.scripts]
copco-build-features = "copco_eye_bench.cli:build_features_main"
copco-run-lm-features = "copco_eye_bench.cli:run_lm_features_main"
copco-run-models = "copco_eye_bench.cli:run_models_main"
copco-fit-mixed-effects = "copco_eye_bench.cli:fit_mixed_effects_main"
copco-validate-run = "copco_eye_bench.cli:validate_run_main"
copco-write-release-features = "copco_eye_bench.cli:write_release_features_main"
copco-run-parser-features = "copco_eye_bench.cli:run_parser_features_main"
copco-run-embeddings = "copco_eye_bench.cli:run_embeddings_main"
copco-build-modeling-tables = "copco_eye_bench.cli:build_modeling_tables_main"
copco-run-analysis-package = "copco_eye_bench.cli:run_analysis_package_main"
copco-finalize-feature-release = "copco_eye_bench.cli:finalize_feature_release_main"
copco-validate-feature-release = "copco_eye_bench.cli:validate_feature_release_main"
copco-build-label-release = "copco_eye_bench.cli:build_label_release_main"
copco-validate-label-release = "copco_eye_bench.cli:validate_label_release_main"
copco-freeze-prepared-dataset = "copco_eye_bench.cli:freeze_prepared_dataset_main"
copco-run-research-exploration = "copco_eye_bench.cli:run_research_exploration_main"
copco-validate-research-exploration = "copco_eye_bench.cli:validate_research_exploration_main"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
